fix contributions hidden by navbar when referenced by permalink hash. refs #521

--- a/res/css/components/media.less
+++ b/res/css/components/media.less
@@ -5,6 +5,12 @@
     > li {
         display: block;
         margin-bottom: (@padding-large-vertical * 1.5);
+
+        &.anchor {
+            margin-bottom: 0;
+            padding-top: calc(@nav-height + @padding-large-vertical * 1.5);
+            margin-top: -@nav-height;
+        }
     }
 }
 
